--- a/style/style.css
+++ b/style/style.css
@@ -51,14 +51,14 @@ html, body{
 
 .title{
     margin-bottom: 10em;
-    background: white;
+    background: #141414;
     position: relative;
     z-index: 2;
     padding: 1em;
     padding-inline: 2em;
     border-radius: 80px;
     backdrop-filter: blur(10px);
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 0.8em;
     text-align: center;
 }
