--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@ html, body{
 
 .title{
     margin-bottom: 10em;
-    background: #141414;
+    background: #c71c22;
     position: relative;
     z-index: 2;
     padding: 1em;
