--- a/style/mediaQuerys.css
+++ b/style/mediaQuerys.css
@@ -5,7 +5,7 @@
 
 .title{
     margin-bottom: 10em;
-    background: #141414;
+    background: #c71c22;
     position: relative;
     z-index: 2;
     padding: 1em;
